# movement_hackathon

./: .gitignore  Makefile  README.md
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  get_movement_balance.py  pyproject.toml
backend/app/: main.py
backend/app/agents/analytics/: agent.py
backend/app/agents/balance/: agent.py
backend/app/agents/bitcoin_defi/: agent.py
backend/app/agents/bridge/: agent.py
backend/app/agents/lending/: agent.py
backend/app/agents/lending_comparison/: __init__.py  agent.py  moveposition_rates.py
backend/app/agents/liquidity/: agent.py
backend/app/agents/orchestrator/: agent.py
backend/app/agents/orderbook/: agent.py
backend/app/agents/prediction/: agent.py
backend/app/agents/premium_lending/: agent.py  echelon_rates.py
backend/app/agents/sentiment/: __init__.py  agent.py  executor.py  orchestrated_agent.py  orchestrated_executor.py
backend/app/agents/sentiment/core/: __init__.py  constants.py  response_validator.py
backend/app/agents/sentiment/services/: __init__.py  executor_validator.py  query_parser.py  response_builder.py
backend/app/agents/sentiment/tools/: __init__.py  santiment.py
backend/app/agents/sentiment/trading_tools/: __init__.py  technical_analysis.py
backend/app/agents/stablecoin/: agent.py
backend/app/agents/swap/: agent.py
backend/app/agents/transfer/: agent.py
backend/app/agents/yield_optimizer/: agent.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py
backend/app/core/: config.py
backend/tests/: test_echelon_rates.py  test_get_movement_balance.py  test_health.py  test_supply_apy.py
frontend/: .env.example  .env.local.example  .gitignore  .prettierignore  PWA_SETUP.md  README.md  docker-compose.yml  next-pwa.d.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/api/balance/: route.ts
frontend/app/api/copilotkit/: route.ts
frontend/app/api/echelon/vault/: route.ts
frontend/app/api/helper.ts/: index.ts  utils.ts
frontend/app/api/premium/: route.ts
frontend/app/api/prices/: route.ts
frontend/app/api/transfer/: route.ts
frontend/app/bridge/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/components/: borrow-modal.tsx  borrowForm.tsx  echelon-borrow-modal.tsx  echelon-repay-modal.tsx  echelon-supply-modal.tsx  payment-modal.tsx  right-sidebar.tsx  sidebar.tsx  supply-modal.tsx  themeToggle.tsx  transfer-form.tsx
frontend/app/components/chat/: MovementChat.tsx  PremiumChat.tsx  TradingRecommendation.tsx
frontend/app/components/types/: index.ts
frontend/app/echelon/: page.tsx
frontend/app/hooks/: useMovementConfig.ts
frontend/app/lend/: page.tsx
frontend/app/overview/: page.tsx
frontend/app/positions/: page.tsx
frontend/app/swap/: page.tsx
frontend/app/transfer/: page.tsx
frontend/app/utils/: borrow-v2-utils.ts  lend-v2-utils.ts  lending-transaction.example.ts  lending-transaction.ts  mosaic-api.ts  token-constants.ts  token-icons.ts  token-utils.ts  tokens.ts
frontend/components/ui/: button.tsx
frontend/lib/super-aptos-sdk/src/: globals.ts  index.ts  super.ts  toolbox.ts
frontend/lib/super-json-api-client/src/: SuperClient.ts  index.ts
frontend/public/: config.json  manifest.json
frontend/scripts/: borrow_v2.ts  lend_v2.ts  redeem_v2.ts  repay_v2.ts  shared.ts  tsconfig.json
frontend/store/: configSlice.ts  index.ts
(+73 files in other folders)
